--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ numpy_stl==3.1.2
 pandas==2.0.3
 pyvista==0.45.2
 pyvistaqt==0.11.1
+pyqt5-tools==5.15.9.3.3
 SciencePlots==2.1.1
 scipy==1.10.1
 sympy==1.13.3
